<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/galaxy"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text="@string/btn_imageProcessing"/>
    </androidx.cardview.widget.CardView>

    <TextView
            android:text="@string/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="76dp"
            style="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintTop_toBottomOf="@+id/cardview"/>

    <TextView
            android:text="@string/woker_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/worker_status"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>